<resources>
    <string name="app_name">Grupo Exclusivo</string>
    <string name="Journey">Sua Jornada</string>
    <string name="ytFirstStep">AIzaSyAAYa22</string>
    <string name="ytSecondStep">ADnST505mxnUFgFh</string>
    <string name="ytThirdStep">FFl5WO7ciB8</string>
    <string name="ytJoinedStep">%1$s%2$s%3$s</string>

    <!--    Splash Screen    -->
    <string name="splashGrupoExclusivo">Grupo Exclusivo</string>
    <string name="splashFrom">from</string>
    <string name="splashLogoContentDescription">Logo do aplicativo Grupo Exclusivo</string>

    <!--    Register Screen    -->
    <string name="registerText">Cadastrar</string>
    <string name="registerButton">Cadastrar</string>
    <string name="registerEmailAdress">Seu melhor e-mail</string>
    <string name="registerPassword">Senha (6 dígitos)</string>
    <string name="registerPasswordConfirmation">Confirme sua senha</string>
    <string name="registerSeparatorText">OU</string>
    <string name="registerHasAccountText">Já tem uma conta?</string>
    <string name="registerButtonDoLoginText"><u>Faça login</u></string>
    <string name="registerInvalidfields">E-mail ou senha inválido</string>

    <!--    FirebaseAuth    -->
    <string name="FirebaseAuthWeakPasswordException">Digite uma senha de 6 dígitos</string>
    <string name="FirebaseAuthInvalidCredentialsException">E-mail ou senha inválido</string>
    <string name="FirebaseAuthUserCollisionException">E-mail já em uso</string>
    <string name="FirebaseAuthOtherException">Falha ao criar usuário</string>
    <string name="FirebaseAuthInvalidUserException">Falha ao entrar com o usuário</string>

    <!--    Login Screen    -->
    <string name="loginText">Entrar</string>
    <string name="loginButton">Entrar</string>
    <string name="loginEmailAdress">Seu e-mail</string>
    <string name="loginPassword">Senha</string>
    <string name="loginSeparatorText">OU</string>
    <string name="loginHasAccountText">Ainda não tem uma conta?</string>
    <string name="loginButtonDoLoginText">Cadastrar</string>

    <!--    Module Screen    -->
    <string name="modulesLogout">Sair</string>
    <string name="modulesSingOutUserErrorText">Não foi possível desconectar</string>
    <string name="modulesInProgressText">EXECUTANDO</string>
    <string name="modulesCompletedText">COMPLETO</string>
    <string name="stepsBack">voltar</string>
    <string name="moduleNotAbleYet">Módulo não liberado</string>

    <!--    Step Screen    -->
    <string name="stepNotAbleYet">Etapa não liberada</string>
    <string name="stepInProgressText">EXECUTANDO</string>
    <string name="stepCompletedText">COMPLETO</string>
</resources>