<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayTwo"
    tools:context=".view.activity.SplashActivity">

    <ImageView
        android:id="@+id/ivLogoSplash"
        android:layout_width="@dimen/splashLogoDimen"
        android:layout_height="@dimen/splashLogoDimen"
        android:contentDescription="@string/splashLogoContentDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/splashFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/splashFromMarginBottom"
        android:text="@string/splashFrom"
        android:visibility="visible"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/splashKaz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/splashKaz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/splashKaz"
        android:text="@string/splashGrupoExclusivo"
        android:textColor="@color/black"
        android:textSize="@dimen/splashKazTextSize"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>