<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.activity.RegisterActivity">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/splashLogoDimen"
            android:layout_height="@dimen/splashLogoDimen"
            android:contentDescription="@string/splashLogoContentDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.033"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <EditText
            android:id="@+id/registerEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/registerEmailAdressMarginStard"
            android:layout_marginTop="@dimen/registerEmailAdressMarginTop"
            android:layout_marginEnd="@dimen/registerEmailAdressMarginEnd"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/registerEmailAdress"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/registerPasswordMarginStard"
            android:layout_marginTop="@dimen/registerPasswordMarginTop"
            android:layout_marginEnd="@dimen/registerPasswordMarginEnd"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/registerPassword"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerEmailAddress" />

        <EditText
            android:id="@+id/registerPasswordConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/registerPasswordMarginStard"
            android:layout_marginTop="@dimen/registerPasswordMarginTop"
            android:layout_marginEnd="@dimen/registerPasswordMarginEnd"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/registerPasswordConfirmation"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/registerButtonMarginStart"
            android:layout_marginTop="@dimen/registerButtonMarginTop"
            android:layout_marginEnd="@dimen/registerButtonMarginEnd"
            android:background="@drawable/register_button"
            android:paddingTop="@dimen/registerButtonPaddingTop"
            android:paddingBottom="@dimen/registerButtonPaddingBottom"
            android:text="@string/registerButton"
            android:textColor="@color/white"
            android:textSize="@dimen/registerButtonTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordConfirmation" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/registerLottieAnimation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:translationZ="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/registerButton"
            app:layout_constraintEnd_toEndOf="@+id/registerButton"
            app:layout_constraintStart_toStartOf="@+id/registerButton"
            app:layout_constraintTop_toTopOf="@+id/registerButton"
            app:lottie_autoPlay="false"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_button" />

        <View
            android:id="@+id/registerLeftSeparator"
            android:layout_width="0dp"
            android:layout_height="@dimen/registerLeftSeparatorHeight"
            android:layout_marginStart="@dimen/registerLeftSeparatorMarginStart"
            android:layout_marginEnd="@dimen/registerLeftSeparatorMarginEnd"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/registerSeparatorText"
            app:layout_constraintEnd_toStartOf="@+id/registerSeparatorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/registerSeparatorText" />

        <TextView
            android:id="@+id/registerSeparatorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/registerSeparatorTextMarginTop"
            android:text="@string/registerSeparatorText"
            android:textColor="@color/white"
            android:textSize="@dimen/registerSeparatorTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerButton" />

        <View
            android:id="@+id/registerRightSeparator"
            android:layout_width="0dp"
            android:layout_height="@dimen/registerRightSeparatorHeight"
            android:layout_marginStart="@dimen/registerRightSeparatorMarginStart"
            android:layout_marginEnd="@dimen/registerRightSeparatorMarginEnd"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/registerSeparatorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/registerSeparatorText"
            app:layout_constraintTop_toTopOf="@+id/registerSeparatorText" />

        <LinearLayout
            android:id="@+id/registerFooterView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/registerFooterViewMarginStart"
            android:layout_marginTop="@dimen/registerFooterViewMarginTop"
            android:layout_marginEnd="@dimen/registerFooterViewMarginEnd"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerSeparatorText">

            <TextView
                android:id="@+id/registerHasAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/registerHasAccountMarginStart"
                android:text="@string/registerHasAccountText"
                android:textColor="@color/white"
                android:textSize="@dimen/registerHasAccountTextSize" />

            <Button
                android:id="@+id/registerButtonDoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/register_footer_button"
                android:text="@string/registerButtonDoLoginText"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/registerButtonDoLoginTextSize" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>